_sass/_main.scss
/* ... */
.section-divider-vision {
  margin: 80px 0 100px 0;
  border-top: 1px solid $gray-9;
}

.link-block > h5 {
  margin-left: 15px;
}

.designer-block {
  background: $white;
  padding: 20px;
  margin-bottom: 15px;
}

.designer-name {
  border-top: 1px solid $gray-3;
  margin-top: 15px;
}

.designer-name > h5 {
  margin-bottom: 3px;
  color: $gray-10;
}

.designer-title {
  font-size: 12px;
  font-weight: 400;
  color: $gray-8;
  line-height: 20px;
  margin: 0;
}

.designer-headshot {
  max-width: 220px;
  max-height: 220px;
  margin: 0 auto;
}

#team-section {
  background: $white;
  margin-top: 100px;
  padding-bottom: 100px;
  width: 100%;
}

#vision-section {
  background: #020304;
  padding-bottom: 120px;
  width: 100%;
}

#footer-section {
  color: $gray-6;
  background: $white;
  width: 100%;
}

.inner-container {
  width: 1200px;
  margin: 0 auto;
  padding: 0;
  box-sizing: border-box;
}


/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */


@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after,
    *:first-letter,
    *:first-line {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

@media (min-width: 940px) {

  #sticky-design-team {
    position: sticky;
    top: 0px;
    height: 340px;
    padding-top: 50px;
    margin-bottom: 40px;
  }

}



@media (max-width: 699px) {

  .nav-tabs,
  .mobile-hide,
  #footer-section,
  .stamps {
    display: none;
  }

  h1 {
    font-size: 28px;
    line-height: 36px;
  }

  h2 {
    font-size: 20px;
    line-height: 28px;
  }

  h3 {
    font-size: 15px;
    line-height: 24px;
  }

  .header {
    height: 50px;
  }

  .logo {
    margin: 20px 0;
    width: 150px;
  }

  #main-section {
    margin-top: 20px;
  }

  .about-push-down {
    margin-top: 0;
  }

  html {
    font-size: 13px;
  }

  .inner-container {
		width: 90%;
		margin: 0 auto;
		padding: 0;
		box-sizing: border-box;
	}

  #vision-section {
    padding-bottom: 0;
  }

  h3.design-team-subline {
    padding-right: 0;
  }

  ul.link-list > a > li > span {
    top: 3px;
  }

}

